<resources>
    <string name="app_name">FirebaseAuthentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Subject</string>
    <string name="email_content">Email content</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_an_account_register">Need an account? Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="exit">Exit</string>
</resources>